force-app/main/default/objects/ShipmentType__mdt/ShipmentType__mdt.object-meta.xml
<CustomObject>
    <label>Shipment Type</label>
    <pluralLabel>Shipment Types</pluralLabel>
</CustomObject>