force-app/main/default/objects/ShipmentType__mdt/fields/ID__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>ID__c</fullName>
    <label>ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>