force-app/main/default/objects/ShipmentType__mdt/fields/IsDefault__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>IsDefault__c</fullName>
    <label>IsDefault</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>