force-app/main/default/objects/ShipmentType__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>ID__c</columns>
    <columns>Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>IsDefault__c</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>MyView</label>
    <language>en_US</language>
</ListView>